# e_t_

./: .gitignore  Cargo.toml  Makefile.toml  package.json  tailwind.config.cjs
migrations/: 20240219061740_create_user_table.sql
src/: config.rs  lib.rs  main.rs
src/app/: components.rs  dashboard.rs  login.rs  mod.rs  router.rs  templates.rs
src/util/: error.rs  response.rs
styles/: globals.css
templates/: dashboard.html  login.html
templates/components/: alert.html  navbar.html
templates/layouts/: base.html
