[package]
name = "e_t_"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
askama = "0.12.1"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
anyhow = "1.0.79"
sqlx = {version = "0.7.3", features = ["runtime-tokio", "sqlite"]}
clap = {version = "4.5.1", features = ["derive", "env"]}
dotenv = "0.15.0"
thiserror = "1.0.57"
